--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>AI Chatbot</title>
-    <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='favicon.ico') }}">
+    <link rel="icon" type="image/png" href="/img/favIcon.png">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/index_style.css') }}">
     <script src="{{ url_for('static', filename='js/app_nav.js') }}" defer></script>
     <script src="{{ url_for('static', filename='js/chat.js') }}" defer></script>
